# spotify_very_simple_rest

./: Cargo.toml  spotify.db  spotify_data.csv
demo/: Cargo.toml  README.md
demo/public/: README.md  app.js  index.html
src/: initialize.rs  main.rs
